<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/et_first_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/type_your_first_name"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintBottom_toTopOf="@id/et_last_name"/>

    <EditText
        android:id="@+id/et_last_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/type_your_last_name"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintBottom_toTopOf="@id/et_address"/>

    <EditText
        android:id="@+id/et_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/type_your_full_address"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
        android:id="@+id/et_phone_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/type_your_phone_number"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/et_address"/>

    <Button
        android:id="@+id/btn_save_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/et_phone_number"/>

    <Button
        android:id="@+id/btn_read_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read"
        app:layout_constraintStart_toEndOf="@id/btn_save_data"
        app:layout_constraintTop_toBottomOf="@id/et_phone_number"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.1"
        android:orientation="vertical"/>

</androidx.constraintlayout.widget.ConstraintLayout>